	  Taylor)
	* Improved some arrangement in the 'status' command code, made
	  working with the heat bar a little more modular. (Greg Taylor)
	* Units triggering trigger mines now have their AMINETRIGGER attribute
	  triggered. This serves to make channel monitoring the MineTriggers
	  channel obsolete and is much more efficient. (Greg Taylor)

	- Merge
	* Added Exile's roll on back walk code. (Tuncay)
	* Added Exile's mine trigger stuff which seperates the
	  Trigger mine and makes it more usable. (Dany)
	* Added Exile's emits (to MechDebugInfo) for picking up
	  and dropping off units. (Dany)
	* Added Exile's Waterproof_Tech but it works on all units
	  except for aeros, vtols and DSes.  Basicly negates any
	  rolls or affects that water has on a unit although
	  the units will still slow down in water. (Dany)
	* Added Coolant Guns. (Dany)
	* Added 'vector' command. (Power_Shaper)
	* Changed tacheight to tacsize. (Dany)
	* Added Exile's head hit stun code.  Can be turned on/off using the
	  mudconf parameter 'btech_exile_stun_code'. (Dany)
	* Finished hooking Maneuvering Ace to turnmodes. (Power_Shaper)
        * Added Exile's Observer channel code with coloring. (Power_Shaper)
        * Added btech_idf_requies_spotter defaulting to 1 for
          idf Spotting requirements. (Power_Shaper)
	* Ported Exile style orbital dropping. (Greg)
	* Ported Exile's heatcutoff code. (Dany)
        * Non Mech/Hover/Sub units drown when OOD'ing into water now. (Power_Shaper)
	* Suits must recycle weaponary before special attacks. (Power_Shaper)

	- Bugfixes
	* Fixed mistiming in weapon recycling code. (Martin Murray)
	* Can no longer hide while OOD'ing (Greg Taylor)
	* Fixed btsetcharvalue() and btgetcharvalue() crashers.
	  (Martin Murray)
	* Some fixes for the mux to compile on Linux/amd64,
	  still a bunch of 32/64 bit issues. (Martin Murray)
	* Changed notify_check to notify_checked, was conflicting 
	  with a builtin function on Mac OS X. (Dany)